@@ -1,3 +1,8 @@
+2005-03-19  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	PR c++/20333
+	* g++.dg/template/crash36.C: New test.
+
 2005-03-17  Richard Sandiford  <rsandifo@redhat.com>
 
 	* gcc.dg/torture/pr19683-1.c: New test.
